<resources>
    <string name="app_name">Hillforts</string>
    <string name="hint_hillfortName">Hillfort Name</string>
    <string name="hint_description">Description</string>
    <string name="hint_notes">Additional Notes</string>
    <string name="visited">Visited</string>
    <string name="date">Date Visited</string>
    <string name="button_addHillfort">Add Hillfort</string>
    <string name="button_editHillfort">Save Hillfort</string>
    <string name="menu_addHillfort">Add</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="menu_deleteHillfort">Delete</string>
    <string name="menu_up">Up</string>
    <string name="menu_list">List</string>
    <string name="menu_logout">Log Out</string>
    <string name="enter_title">Please enter a name</string>
    <string name="enter_name">Please enter your name</string>
    <string name="enter_email">Please enter your email</string>
    <string name="enter_password">Please enter your password</string>
    <string name="enter_year">Please enter your year</string>
    <string name="button_addImage"> Add Image 1</string>
    <string name="button_changeImage"> Change Image 1</string>
    <string name="button_addImage2"> Add Image 2</string>
    <string name="button_changeImage2"> Change Image 2</string>
    <string name="button_addImage3"> Add Image 3</string>
    <string name="button_changeImage3"> Change Image 3</string>
    <string name="button_addImage4"> Add Image 4</string>
    <string name="button_changeImage4"> Change Image 4</string>
    <string name="select_hillfort_image">Select Hillfort Image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="login_title">Login</string>
    <string name="signup_title">Signup</string>
    <string name="fav_title">Favourites</string>
    <string name="fav_name">Favourite</string>
    <string name="save">Save</string>
    <string name="rating">Rating</string>
    <string name="title_activity_login"> Signup/Login to Hillfort</string>
    <string name="settings_title">Change Email</string>
    <string name="button_settings">Update Email</string>
    <string name="button_password">Reset Password</string>
    <string name="stats_title">Statistics</string>
    <string name="hint_login">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_year">Year</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Signup</string>
    <string name="button_forgot">Forgot Password</string>
    <string name="signup_needed">Create an Account</string>
    <string name="email_not_found">Email address not found</string>
    <string name="email_used">Email address is already registered</string>
    <string name="email_invalid">Invalid email address</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="short_password">Password must be at least 8 characters</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_add">Add Hillfort</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_hillforts">List of Hillforts</string>
    <string name="menu_map">Map</string>
    <string name="image_placeholder">Hillfort Image</string>
    <string name="title_placeholder">Hillfort Title</string>
    <string name="description_placeholder">Hillfort Description</string>


</resources>