<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wit.hillforts.activities.HillfortActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nameTitle"
                    android:text="@string/hint_hillfortName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="16dp"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/hillfortName"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_hillfortName"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/descriptionTitle"
                    android:text="@string/hint_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="16dp"
                    android:textStyle="bold"
                    android:textSize="18sp" />



                <EditText
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_description"
                    android:inputType="textMultiLine"
                    android:maxLength="2500"
                    android:maxLines="10"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:scrollbars="vertical"/>

                <TextView
                    android:id="@+id/hillfortNotes"
                    android:text="@string/hint_notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="16dp"
                    android:textStyle="bold"
                    android:textSize="18sp" />


                <EditText
                    android:id="@+id/notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_notes"
                    android:inputType="textMultiLine"
                    android:maxLength="2500"
                    android:maxLines="10"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:scrollbars="vertical"/>



                <Switch
                    android:id="@+id/button_visited"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:splitTrack="true"
                    android:text="Visited"
                    android:textSize="18sp"
                    android:showText="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textOff="No"
                    android:textOn="Yes"
                    android:switchTextAppearance="@style/MySwitchStyle"

                                        />

                <TextView
                    android:id="@+id/date_title"
                    android:text="@string/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="16dp"
                    android:paddingTop="5dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:visibility="gone"/>

                <DatePicker
                    android:id="@+id/date_visited"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/hillfortLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_location"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>

                <ImageView
                    android:id="@+id/hillfortImage"
                    android:layout_width="300dp"
                    android:layout_height="400px"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_centerHorizontal="true"/>

                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>


                <ImageView
                    android:id="@+id/hillfortImage2"
                    android:layout_width="300dp"
                    android:layout_height="400px"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_centerHorizontal="true"/>

                <Button
                    android:id="@+id/chooseImage2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/button_addImage2"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>



                <ImageView
                    android:id="@+id/hillfortImage3"
                    android:layout_width="300dp"
                    android:layout_height="400px"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_centerHorizontal="true"
                    />

                <Button
                    android:id="@+id/chooseImage3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/button_addImage3"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>


                <ImageView
                    android:id="@+id/hillfortImage4"
                    android:layout_width="300dp"
                    android:layout_height="400px"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_centerHorizontal="true"/>

                <Button
                    android:id="@+id/chooseImage4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/button_addImage4"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>


                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addHillfort"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />




            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>