<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wit.hillforts.activities.SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/signupTitle"
                    android:text="@string/settings_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="16dp"
                    android:paddingBottom="10dp"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/nameSettings"
                    android:text="@string/hint_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="16dp"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/updateName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/settingsEmail"
                    android:text="@string/hint_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="16dp"
                    android:textStyle="bold"
                    android:textSize="18sp" />



                <EditText
                    android:id="@+id/updateEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:inputType="textEmailAddress"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                   />

                <TextView
                    android:id="@+id/settingsPassword"
                    android:text="@string/hint_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="16dp"
                    android:textStyle="bold"
                    android:textSize="18sp" />


                <EditText
                    android:id="@+id/updatePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:inputType="textPassword"
                    android:maxLength="2500"
                    android:maxLines="10"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:scrollbars="vertical"/>


                <TextView
                    android:id="@+id/settingsyear"
                    android:text="@string/hint_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="16dp"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/updateYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:inputType="number"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_settings"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/statisticsTitle"
                    android:text="@string/stats_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="16dp"
                    android:paddingBottom="10dp"
                    android:textStyle="bold"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/statsTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="16dp"
                    android:paddingBottom="10dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/statsVisited"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="16dp"
                    android:paddingBottom="10dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/statsRecent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="16dp"
                    android:paddingBottom="10dp"
                    android:textSize="18sp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/statsNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="16dp"
                    android:paddingBottom="10dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/statsImages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="16dp"
                    android:paddingBottom="10dp"
                    android:textSize="18sp" />





            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>